2004-04-27  Andras Timar  <timar@gnome.hu>
	* hu.po: Updated Hungarian translation.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13086 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po-libgimp/ChangeLog
+++ b/po-libgimp/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-27  Andras Timar  <timar@gnome.hu>
+
+	* hu.po: Updated Hungarian translation.
+
 2004-04-24  Christophe Merlet  <redfox@redfoxcenter.org>
 
 	* fr.po: Updated French translation.
