--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-29  Michael Natterer  <mitch@gimp.org>
+
+	* POTFILES.in: removed all menus files and added all actions ones.
+
 2004-04-26  Marco Ciampa  <ciampix@libero.it>
 
 	* it.po: Updated italian translation.
