2004-04-29  Manish Singh  <yosh@gimp.org>
        * plug-ins/pygimp/plug-ins/py-slice.py: Quick fix to make uppercase
        tags work properly.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13091 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-04-29  Manish Singh  <yosh@gimp.org>
+
+	* plug-ins/pygimp/plug-ins/py-slice.py: Quick fix to make uppercase
+	tags work properly.
+
 2004-04-29  Michael Natterer  <mitch@gimp.org>
 
 	* app/tools/gimp*tool.c (gimp_*_tool_register): stripped the menu
