--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2004-04-29  Michael Natterer  <mitch@gimp.org>
+
+	* libgimpbase/gimputils.[ch] (gimp_escape_uline): new function
+	which does the opposite of gimp_strip_uline().
+
+	* app/actions/file-actions.c (file_actions_last_opened_update):
+	escape ulines in filenames so they don't end up as mnemonics.
+	Spotted by Pedro Gimeno.
+
 2004-04-29  Manish Singh  <yosh@gimp.org>
 
 	* plug-ins/pygimp/plug-ins/py-slice.py: Quick fix to make uppercase
