--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,5 +1,9 @@
 2004-04-29  Michael Natterer  <mitch@gimp.org>
 
+	* POTFILES.in: follow <Load> and <Save> menu changes.
+
+2004-04-29  Michael Natterer  <mitch@gimp.org>
+
 	* POTFILES.in: removed all menus files and added all actions ones.
 
 2004-04-26  Marco Ciampa  <ciampix@libero.it>
