--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,8 @@
+2004-04-30  Sven Neumann  <sven@gimp.org>
+
+	* libgimpbase/libgimpbase-sections.txt
+	* libgimpbase/tmpl/gimputils.sgml: added gimp_escape_uline().
+
 2004-04-22  Sven Neumann  <sven@gimp.org>
 
 	* libgimp/Makefile.am: specify --deprecated-guards.
