2004-04-30  Sven Neumann  <sven@gimp.org>
	* app/gui/tool-options-menu.c: added casts to please the compiler.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13098 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-30  Sven Neumann  <sven@gimp.org>
+
+	* app/gui/tool-options-menu.c: added casts to please the compiler.
+
 2004-04-30  Michael Natterer  <mitch@gimp.org>
 
 	* app/widgets/gimpuimanager.[ch]: added signal "update" which
