--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-05-01  Sven Neumann  <sven@gimp.org>
+
+	* configure.in: check for xmllint and xsltproc but don't require
+	these tools.
+
+	* menus/Makefile.am
+	* tips/Makefile.am: simplified "validate" targets.
+
 2004-04-30  Pedro Gimeno  <pggimeno@wanadoo.es>
 
 	* app/tools/gimprectselecttool.c: Cleanups.
