--- a/HACKING
+++ b/HACKING
@@ -19,6 +19,9 @@ Beta software can be found at alpha.gnu.org.
     * intltoolize 0.17 (or preferably a newer version)
         - ftp://ftp.gnome.org/pub/gnome/sources/intltool/
 
+    * xsltproc
+        - ftp://ftp.gnome.org/pub/GNOME/sources/libxslt/1.1/
+
 These are only the additional requirements if you want to compile from
 CVS. The file INSTALL lists the various libraries we depend on.
 
