--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,17 @@
+2004-05-02  Sven Neumann  <sven@gimp.org>
+
+	* libgimpwidgets/Makefile.am
+	* libgimpwidgets/gimpwidgets.h
+	* libgimpwidgets/gimpwidgetstypes.h
+	* libgimpwidgets/gimpframe.[ch]: added new widget GimpFrame, a HIG
+	compliant variant of GtkFrame.
+
+	* app/gui/preferences-dialog.c: enable the HIG compliant mode by
+	default and use the new GimpFrame widget for it.
+
+	* themes/Small/gtkrc: set a smaller spacing between the GimpFrame
+	title label and the frame content.
+
 2004-05-02  Michael Natterer  <mitch@gimp.org>
 
 	* app/actions/qmask-actions.c: renamed action "qmask-toggle" to
