--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2004-05-02  Sven Neumann  <sven@gimp.org>
 
+	* app/widgets/gimpenumwidgets.c
+	* app/widgets/gimpgrideditor.c
+	* app/widgets/gimptemplateeditor.c: use the GimpFrame widget,
+	changed some spacings to better comply with the HIG.
+
+2004-05-02  Sven Neumann  <sven@gimp.org>
+
 	* libgimpwidgets/Makefile.am
 	* libgimpwidgets/gimpwidgets.h
 	* libgimpwidgets/gimpwidgetstypes.h
