--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-05-03  Michael Natterer  <mitch@gimp.org>
+
+	* app/actions/dockable-commands.c (dockable_add_tab_cmd_callback):
+	truncate the passed dialog identifier at the first '|'. Fixes
+	creating brushes, paterns etc. dialogs from the dockables'
+	"Add Tab" menu.
+
 2004-05-02  Sven Neumann  <sven@gimp.org>
 
 	* libgimpwidgets/gimpframe.c (gimp_frame_size_request): take the
