--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-05-03  Sigurd Gartmann  <sigurd-translate@brogar.org>
+
+	* no.po: Updated norwegian bokmål translation (Work by Runar Ingebrigtsen)
+
 2004-04-29  Michael Natterer  <mitch@gimp.org>
 
 	* POTFILES.in: follow <Load> and <Save> menu changes.
