--- a/ChangeLog
+++ b/ChangeLog
@@ -1,9 +1,11 @@
 2004-05-03  Michael Natterer  <mitch@gimp.org>
 
 	* app/widgets/gimpdock.c (gimp_dock_key_press_event): new function
-	which overrides GtkWindow's default handler in order to block
-	accelearators without any and with <Shift> modifier while a text
-	input widget is active. Thanks to Tim Janik for the code.
+	which overrides GtkWindow's default handler in order to give the
+	focus widget precedence over accelerators for keys without any
+	modifier or with <Shift> modifier. Enables e.g. having a <Shift>+s
+	accelerator while still being able to enter 'S' in an entry.
+	Thanks to Tim Janik for the code.
 
 2004-05-03  Michael Natterer  <mitch@gimp.org>
 
