--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-05-04  Sven Neumann  <sven@gimp.org>
+
+	* app/gui/stroke-dialog.c: 
+	* app/widgets/gimpstrokeeditor.c: moved line style options into a
+	GtkExpander. Changed dialog spacings.
+
 2004-05-03  Manish Singh  <yosh@gimp.org>
 
 	* app/actions/qmask-actions.c: initialize is_active for qmask-toggle.
