--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-05-04  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/common/sobel.c (sobel_dialog): removed frame, adjusted
+	spacing, fixes bug #141773.
+
+2004-05-04  Sven Neumann  <sven@gimp.org>
+
 	* app/gui/stroke-dialog.c: 
 	* app/widgets/gimpstrokeeditor.c: moved line style options into a
 	GtkExpander. Changed dialog spacings.
