2004-05-04  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
	* es.po: Updated Spanish translation.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13134 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-05-04  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
+
+	* es.po: Updated Spanish translation.
+
 2004-05-03  Sven Neumann  <sven@gimp.org>
 
 	* POTFILES.in: added new files.
